# delphinos-installer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Instalador DelphinOS  LICENSE  Makefile  Makefile.pro  QtGui  cmake_install.cmake  delphinosInstallerElevated.cpp  docker-run.sh  installationPage.cpp  installationPage.hpp  keymapSearch.hpp  keymaps.hpp  loadingAnimation.hpp  localizationPage.cpp  localizationPage.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  mainwindow.cpp  moc_QtGui.cpp  mountPartitions.sh  network.hpp  networkDBus.cpp  networkDBus.hpp  networkPage.cpp  networkPage.hpp  packagesPage.cpp  packagesPage.hpp  partitionPage.cpp  partitionPage.hpp  statusIndicator.hpp  systemInstallScript.sh  timezones.hpp  usersPage.cpp  usersPage.hpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
keymaps/: layouts
systemInstallation/: common  installPackages.sh  systemInstallation.sh
systemInstallation/systemFiles/etc/: pacman.conf
systemInstallation/systemFiles/etc/delphinos-release/: PKGBUILD
systemInstallation/systemFiles/etc/skel/.config/: kdeglobals
systemInstallation/systemFiles/etc/xdg/: kdeglobals  plasmashellrc
systemInstallation/systemFiles/usr/lib/: os-release
